# desktop-pet

./: .cursorrules  .gitignore  AI_AGENT_PLAN.md  AI_ARCHITECTURE_GUIDE.md  AI_RULES.md  README.md  index.html  latest.json  latest_from_github.json  package-lock.json  package.json  replay.cjs  sig.txt  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.husky/: pre-commit
src/: App.svelte  app.css  main.ts  style.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_advisor.rs  commands.rs  config.rs  db.rs  dev_monitor.rs  lib.rs  main.rs  pet_state.rs  system_monitor.rs
src-tauri/src/commands/: ai.rs  config.rs  db.rs  dev.rs  mod.rs  pet.rs  system.rs  window.rs
src-tauri/src/sys/: win32.rs
src/lib/: collision.test.ts  collision.ts  particleSystem.ts  physics.ts  state.svelte.ts  turtle.ts  types.ts  utils.test.ts  utils.ts
src/lib/agent/: actions.ts  agent_manager.ts  goals.ts  learning.ts  memory.ts  planner.ts  utility.ts  world_model.ts
src/lib/behaviors/: legacy.ts
src/lib/components/: BreakOverlay.svelte  DecorateHUD.svelte  PetCanvas.svelte  SpeechBubble.svelte  StatsHUD.svelte  UpdateDialog.svelte
src/lib/fsm/: GlobalPhysics.ts  State.ts  StateMachine.ts
src/lib/fsm/states/: LegacyState.ts  SleepState.ts  WanderState.ts
src/lib/renderer/: AccessoryRenderer.ts  BaseRenderer.ts  FaceRenderer.ts  LimbsRenderer.ts  ParticleRenderer.ts  ShellRenderer.ts  TurtleRenderer.ts
